# tonywebb

./: README.md  build_browser.py  clubs.csv  compare.py  compare_browser.html  compare_matches.py  compare_results.md  full_text_output_gemini31pro.txt  full_text_output_gpt54.txt  full_text_output_qwen3.5.txt  full_text_output_sonnet46.txt  generate_clubs.py  match_index_claude-opus-4.6.csv  match_index_claude-opus-4.7.csv  match_index_claude-sonnet-4.6.csv  match_index_deepseek-v4-flash.csv  match_index_deepseek-v4-pro.csv  match_index_gemini-3.1-pro-preview.csv  match_index_gemma4-31b.csv  match_index_glm-5.1.csv  match_index_glm-5_cloud.csv  match_index_gpt-5.5.csv  match_index_kimi-k2.6.csv  match_index_minimax-m2.7.csv  match_index_mistral-large-3:675b-cloud.csv  match_index_mistral-large-3_675b-cloud.csv  match_index_qwen3.5_cloud.csv  match_index_qwen3.6_35b-a3b-mlx-bf16.csv  match_index_willis.csv  normalize.py  notes.md  parser.py  parser_matches.py  pyproject.toml  raw_responses_claude-opus-4.6.jsonl  raw_responses_claude-opus-4.7.jsonl  raw_responses_claude-sonnet-4.6.jsonl  raw_responses_deepseek-v4-flash.jsonl  raw_responses_deepseek-v4-pro.jsonl  raw_responses_gemini-3.1-pro-preview.jsonl  (+15 more)
qwen3.5:397b/: tw_newspaper_cuttings_1895_1.txt  tw_newspaper_cuttings_1895_10.txt  tw_newspaper_cuttings_1895_100.txt  tw_newspaper_cuttings_1895_101.txt  tw_newspaper_cuttings_1895_102.txt  tw_newspaper_cuttings_1895_103.txt  tw_newspaper_cuttings_1895_104.txt  tw_newspaper_cuttings_1895_105.txt  tw_newspaper_cuttings_1895_106.txt  tw_newspaper_cuttings_1895_107.txt  (+237 more)
