[project]
name = "tonywebb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llm>=0.31",
    "llm-anthropic>=0.1",
    "llm-gemini>=0.1",
    "llm-ollama>=0.16.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
